# kdd2026-tutorial-proposal

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
ama/: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
ama/debate/: __init__.py  debate_pool.py  graph_tools.py  lpg_agent.py  rdf_agent.py  schemas.py  synthesis_agent.py
ama/docs/: migration_handoff.md  public_private_transfer_plan.md
ama/experiments/: category_entity_overlap.py  eval_ablation.py  eval_smoke.py  finder_category_signal_analysis.py  generate_finder_analysis_visuals.py  inspect_example_chain.py  rematerialize_all.py  render_prompt_rules.py  run_debate.py  run_indexing.py  verify_traces.py
ama/framework/: __init__.py  analysis.py  evaluation.py  fibo_loader.py  graph_store.py  llm_client.py  llm_models.py  loader.py  neo4j_safe.py  ontology.py  pipeline.py  prompt_rules.py  rdf_export.py  schema.py
ama/tracing/: __init__.py  tracing.py
docker/python/: Dockerfile  requirements.txt
docs/: README.md  experiment_setup.md
proposal/: abstract_draft.md  lecture_style_outline.md  submission_brief.md  title_candidates.md
scripts/: README.md  analyze_finder_graph_baselines.py  build_proposal_metrics_report.py  build_submission_assets.py  evaluate_manual_gold_subset.py  export_finder_run_results.py  export_intermediate_run_snapshot.py  filter_finder_top3.py  init_metadata_db.py  print_finder_run_status.py  run_finder_experiment.py  watch_finder_run.py
sql/: init_metadata.sql
tutorials/: __init__.py
(+29 files in other folders)
